Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56697

[REG 5.7.0 -> 5.7.1] Popups don't close on click outside

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.7.1
    • 5.7.1
    • Quick: Controls 2
    • None
    • Linux Desktop
    • 6f6e073815d5b05aba553b83809fb701541260c6

      Steps to reprocude:

      • run the Gallery example
      • open & close the style combobox in the settings dialog
      • open the options menu
      • mouse click outside the menu

      Expected: the menu closes
      Actual: the menu stays open

        For Gerrit Dashboard: QTBUG-56697
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes